updated native utils api