@@ -210,11 +210,11 @@ public class VTLinuxNativeUtils implements VTNativeUtils
     {
       if (!enabled)
       {
-        Runtime.getRuntime().exec("stty -echo < /dev/tty").waitFor();
+        Runtime.getRuntime().exec(new String[] {"/bin/sh", "-c", "stty -echo < /dev/tty"}).waitFor();
       }
       else
       {
-        Runtime.getRuntime().exec("stty echo < /dev/tty").waitFor();
+        Runtime.getRuntime().exec(new String[] {"/bin/sh", "-c", "stty echo < /dev/tty"}).waitFor();
       }
     }
     catch (Throwable t)
@@ -229,11 +229,11 @@ public class VTLinuxNativeUtils implements VTNativeUtils
     {
       if (!enabled)
       {
-        Runtime.getRuntime().exec("stty -icanon < /dev/tty").waitFor();
+        Runtime.getRuntime().exec(new String[] {"/bin/sh", "-c", "stty -icanon < /dev/tty"}).waitFor();
       }
       else
       {
-        Runtime.getRuntime().exec("stty icanon < /dev/tty").waitFor();
+        Runtime.getRuntime().exec(new String[] {"/bin/sh", "-c", "stty icanon < /dev/tty"}).waitFor();
       }
     }
     catch (Throwable t)
@@ -246,7 +246,7 @@ public class VTLinuxNativeUtils implements VTNativeUtils
   {
     try
     {
-      Runtime.getRuntime().exec("stty raw < /dev/tty").waitFor();
+      Runtime.getRuntime().exec(new String[] {"/bin/sh", "-c", "stty raw < /dev/tty"}).waitFor();
     }
     catch (Throwable t)
     {
@@ -258,7 +258,7 @@ public class VTLinuxNativeUtils implements VTNativeUtils
   {
     try
     {
-      Runtime.getRuntime().exec("stty sane < /dev/tty").waitFor();
+      Runtime.getRuntime().exec(new String[] {"/bin/sh", "-c", "stty sane < /dev/tty"}).waitFor();
     }
     catch (Throwable t)
     {
