@@ -212,11 +212,11 @@ public class VTMacNativeUtils implements VTNativeUtils
     {
       if (!enabled)
       {
-        Runtime.getRuntime().exec("stty -echo < /dev/tty").waitFor();
+        Runtime.getRuntime().exec(new String[] {"/bin/sh", "-c", "stty -echo < /dev/tty"}).waitFor();
       }
       else
       {
-        Runtime.getRuntime().exec("stty echo < /dev/tty").waitFor();
+        Runtime.getRuntime().exec(new String[] {"/bin/sh", "-c", "stty echo < /dev/tty"}).waitFor();
       }
     }
     catch (Throwable t)
@@ -231,11 +231,11 @@ public class VTMacNativeUtils implements VTNativeUtils
     {
       if (!enabled)
       {
-        Runtime.getRuntime().exec("stty -icanon < /dev/tty").waitFor();
+        Runtime.getRuntime().exec(new String[] {"/bin/sh", "-c", "stty -icanon < /dev/tty"}).waitFor();
       }
       else
       {
-        Runtime.getRuntime().exec("stty icanon < /dev/tty").waitFor();
+        Runtime.getRuntime().exec(new String[] {"/bin/sh", "-c", "stty icanon < /dev/tty"}).waitFor();
       }
     }
     catch (Throwable t)
@@ -248,7 +248,7 @@ public class VTMacNativeUtils implements VTNativeUtils
   {
     try
     {
-      Runtime.getRuntime().exec("stty raw < /dev/tty").waitFor();
+      Runtime.getRuntime().exec(new String[] {"/bin/sh", "-c", "stty raw < /dev/tty"}).waitFor();
     }
     catch (Throwable t)
     {
@@ -260,7 +260,7 @@ public class VTMacNativeUtils implements VTNativeUtils
   {
     try
     {
-      Runtime.getRuntime().exec("stty sane < /dev/tty").waitFor();
+      Runtime.getRuntime().exec(new String[] {"/bin/sh", "-c", "stty sane < /dev/tty"}).waitFor();
     }
     catch (Throwable t)
     {
